--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <main>
-        <section id="telefone"></section>
-        <section id="redes"></section>
+        <section id="telefone">
+            <iframe src="tela-telefone.html" frameborder="0" id="tela-telefone" name="tela-principal"></iframe>
+        </section>
+        <section id="redes">
+            <form action="" method="get">
+                <a href="facebook.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-facebook.jpg" alt="" class="imagens-logo"></a>
+                <a href="instagram.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-instagram.jpg" alt="" class="imagens-logo"></a>
+                <a href="twitter.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-twitter.jpg" alt="" class="imagens-logo"></a>
+                <a href="github.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-github.jpg" alt="" class="imagens-logo"></a>
+                <a href="youtube.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-youtube.jpg" alt="" class="imagens-logo"></a>
+                <a href="tela-telefone.html" target="tela-principal" class="imagens-tela"><img src="/imagens/logo-home.jpg" alt="" class="imagens-logo"></a>
+            </form>
+        </section>
     </main>
     
 </body>
