--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/tela.css">
 </head>
 <body>
-    <img src="/imagens/tela-facebook.jpg" alt="youtube">
+    <img src="/imagens/tela-facebook.png" alt="youtube">
     <a href="https://www.facebook.com/" target="_blank">acesse</a>
     
 </body>
