--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/tela.css">
 </head>
 <body>
-    <img src="/imagens/tela-github.jpg" alt="youtube">
+    <img src="/imagens/tela-github.png" alt="youtube">
     <a href="https://github.com/" target="_blank">acesse</a>
     
 </body>
