--- a/twitter.html
+++ b/twitter.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/tela.css">
 </head>
 <body>
-    <img src="/imagens/tela-twitter.jpg" alt="youtube">
+    <img src="/imagens/tela-twitter.png" alt="youtube">
     <a href="https://x.com/home?lang=pt-br" target="_blank">acesse</a>
     
 </body>
